--- a/components/Posts/Post.module.scss
+++ b/components/Posts/Post.module.scss
@@ -105,7 +105,7 @@
     .post {
         width: 100%;
         padding-bottom: 3px;
-        animation: appear 0.6s forwards;
+        animation: appear2 0.6s forwards;
         .text {
             font-size: 0.95em;
             padding-left: 66.5px;
@@ -226,6 +226,17 @@
     from {
         opacity: 0;
         transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes appear2 {
+    from {
+        opacity: 0;
+        transform: translateY(7px);
     }
     to {
         opacity: 1;
