--- a/components/Posts/ToPost.module.scss
+++ b/components/Posts/ToPost.module.scss
@@ -190,6 +190,7 @@
 
 @media (max-width: 1500px) {
     .publicContainer {
+        width: 36vw;
         .inputContainer {
             height: 100px;
             .image {
